# tlsr825x-ota

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: architecture.md  mtu-diagnostics.md
examples/: flash.sh
tests/: test_client.py  test_diagnostics.py  test_firmware.py  test_ota_helpers.py  test_protocol.py
tlsr825x_ota/: __init__.py  capture.py  cli.py  client.py  constants.py  diagnostics.py  firmware.py  logging_setup.py  ota.py  protocol.py  scanner.py
