[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlsr825x-ota"
version = "0.2.0"
description = "Native Linux CLI for Telink TLSR825x BLE OTA updates"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "h3adbang3r"}]
dependencies = [
  "bleak>=0.22,<2",
  "rich>=13,<15",
  "typer>=0.12,<1",
]

[project.scripts]
tlsr825x-ota = "tlsr825x_ota.cli:app"

[tool.setuptools.packages.find]
include = ["tlsr825x_ota*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
